# CppSOLID

project/app/common/: CMakeLists.txt
project/app/configs/: CMakeLists.txt
project/app/configs/ut/: CMakeLists.txt
project/app/parsers/: CMakeLists.txt
project/app/parsers/ut/: CMakeLists.txt
project/app/servers/: CMakeLists.txt
project/app/services/ut/: CMakeLists.txt
stand-alone-examples/SRP/: plant-care-example.cpp
